2008-06-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix GtkWidget event signal parameters,
	patch by Andrea Del Signore, fixes bug 537092

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-15  Jürg Billeter  <j@bitron.ch>

	* vapi/taglib_c.vapi:

	Use [Compact] attribute, patch by Levi Bard, fixes bug 536987

2008-06-15  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am
	* vapi/gdk-pixbuf-2.0.deps:
	* vapi/packages/atk/:
	* vapi/packages/gdk-2.0/:
	* vapi/packages/gdk-pixbuf-2.0/:
	* vapi/packages/gio-2.0/:
	* vapi/packages/gio-unix-2.0/:
	* vapi/packages/gtk+-2.0/:
	* vapi/packages/pango/:
	* vapi/packages/pangocairo/:

	Update to GTK+ 2.13.3, fixes bug 536369

	* vapi/atk.vapi:
	* vapi/gdk-2.0.vapi:
	* vapi/gdk-pixbuf-2.0.vapi:
	* vapi/gio-2.0.vapi:
	* vapi/gio-unix-2.0.vapi:
	* vapi/gtk+-2.0.vapi:
	* vapi/pango.vapi:
	* vapi/pangocairo.vapi:

	Regenerated

2008-06-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecreationmethodbinding.vala:

	Report error when trying to assign private properties in creation
	methods, patch by Hans Vercammen, fixes bug 536353

2008-06-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsignal.vala:
	* gobject/valaccodetypesymbolbinding.vala:

	Fix crash when using signals with array parameters,
	fixes bug 538212

2008-06-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/vte/:

	Fix vte_terminal_fork_command binding

	* vapi/vte.vapi: regenerated

2008-06-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-rtsp-0.10/:

	Various fixes, patch by Ali Sabil

	* vapi/gstreamer-rtsp-0.10.vapi: regenerated

2008-06-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_label_new binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-14  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala:

	fixed attribute parsing 

2008-06-13  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Check printf arguments, fixes bug 483104

	* vala/valainterfacewriter.vala: